styles.css
body{
    width: 100%;
    background-color: wheat;
    color: brown;
    display: flex;
    justify-content: center;
    align-items: c;
    position: relative;
}


.container{
    width: 100%;
    padding: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 100px;
    position: relative;
}

.interactive-ui{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;   
}


button{
    padding: 30px;
}


#results{
    width: 100%;
    display: flex;
    justify-content: space-around;
}

